--- a/security.html
+++ b/security.html
@@ -39,6 +39,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://www.mcgill.co.uk/about-us/careers/security-engineer-aberdeen'>Security Engineers (Aberdeen &amp; Dundee) | McGill</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698456535-information-security-analyst-f-m-d-'>Ubisoft Information Security Analyst (f/m/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">D?sseldorf, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
@@ -71,7 +75,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/prominentedge/26f57f3b-643e-4e91-bdbd-7b99a6ccb39d'>Prominent Edge LLC - Senior Security Solutions Engineer  (TS/SCI Required)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/prominentedge/26f57f3b-643e-4e91-bdbd-7b99a6ccb39d'>Prominent Edge LLC - Senior Security Solutions Engineer  (TS/SCI Required)</a></h5> 
 <p><span class="badge badge-light">Springfield, VA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -111,7 +115,7 @@
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://acrisure.applytojob.com/apply/zNuAOnDJJX/Security-Automation-Engineer'>Security Automation Engineer - Acrisure LLC - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://acrisure.applytojob.com/apply/zNuAOnDJJX/Security-Automation-Engineer'>Security Automation Engineer - Acrisure LLC - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -201,7 +205,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light">Singapore, Singapore</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Colliers1/743999692873355-security-analyst'>Colliers Security Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Colliers1/743999692873355-security-analyst'>Colliers Security Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -221,7 +225,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://adjust.join.com/jobs/465543-information-security-analyst'>Job @ Adjust (Berlin): Information Security Analyst | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://adjust.join.com/jobs/465543-information-security-analyst'>Job @ Adjust (Berlin): Information Security Analyst | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -285,11 +289,11 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/voleon/0ca2005e-af5c-4dbc-adbe-a97393fa6426'>The Voleon Group - Senior Security Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/voleon/0ca2005e-af5c-4dbc-adbe-a97393fa6426'>The Voleon Group - Senior Security Engineer</a></h5> 
 <p><span class="badge badge-light">Berkeley</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/xorsecurity/jobs/4495444002'>Job Application for Senior Security Engineer at XOR Security</a></h5> 
+<h5><a href='https://boards.greenhouse.io/xorsecurity/jobs/4495444002'>Job Application for Senior Security Engineer at XOR Security</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -305,7 +309,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA, USA</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=ohHZafwR&__jvst=Tenable+Employee&__jvsd=s3pCGgwv&__jvsc=Twitter&bid=nKZylMwT'>Tenable Careers - Security Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=ohHZafwR&__jvst=Tenable+Employee&__jvsd=s3pCGgwv&__jvsc=Twitter&bid=nKZylMwT'>Tenable Careers - Security Engineer</a></h5> 
 <p><span class="badge badge-light">Tokyo Tokyo</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -323,7 +327,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light">Riga, Latvia</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careercyresconsulting.recruitee.com/o/automotive-security-software-engineer-wmd'>
+<h5><a href='https://careercyresconsulting.recruitee.com/o/automotive-security-software-engineer-wmd'>
       Automotive Security Software Engineer (w/m/d) - CYRES Consulting Services GmbH
     </a></h5> 
 <p><span class="badge badge-light">Munich</span></p>
@@ -343,7 +347,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light">London  San Francisco Chicago</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oqyQafwI&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nogqlMwG'>ServiceNow Careers - Security Analyst (US Federal Incident Response)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oqyQafwI&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nogqlMwG'>ServiceNow Careers - Security Analyst (US Federal Incident Response)</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA, USA</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -414,7 +418,7 @@ data leakage prevention; Responsible for Web application firewall and related?..
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/xylem-nor/job/onBnbfwg'>Xylem Careers - Senior Security Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/xylem-nor/job/onBnbfwg'>Xylem Careers - Senior Security Architect</a></h5> 
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -448,10 +452,6 @@ application penetration tester. Here in Ryanair, you will conduct Manual?...</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/MarinerPartnersInc/743999697475092-security-analyst-soc-bilingual-french-and-english-'>Mariner Partners Inc. Security Analyst - SOC (Bilingual - French and English) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Montreal, QCCanada  Canada</span></p>
-<p>Posted on: 2019-10-25</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999698043013-security-engineer-cloud-infrastructure'>4Catalyzer Security Engineer - Cloud Infrastructure | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
 
